--- a/imageUploader/src/app/app.component.html
+++ b/imageUploader/src/app/app.component.html
@@ -1,18 +1,1 @@
-<h1 class="text-layout">Hello, I'm Image Uploader</h1>
-<button
-  pButton
-  type="button"
-  label="Warning"
-  class="p-button-rounded p-button-warning"
-></button>
-<p-card
-  header="Simple Card"
-  [style]="{ width: '25rem', 'margin-bottom': '2em', 'margin-top': '1em' }"
->
-  <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed
-    consequuntur error repudiandae numquam deserunt quisquam repellat libero
-    asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate
-    neque quas!
-  </p>
-</p-card>
+<router-outlet></router-outlet>
