Card-Image component created

--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
@@ -1,6 +1,7 @@
 <div class="container flex align-content-center justify-content-center">
   <div class="flex align-items-center justify-content-center">
     <!-- <app-uploader></app-uploader> -->
-    <app-loader></app-loader>
+    <!-- <app-loader></app-loader> -->
+    <app-card-image></app-card-image>
   </div>
 </div>
