Dark theme available

--- a/imageUploader/src/app/uploader/components/card-image/card-image.component.css
+++ b/imageUploader/src/app/uploader/components/card-image/card-image.component.css
@@ -27,9 +27,9 @@ img {
 }
 
 input {
-    background-color: #f3f3f3;
     font-size: small;
     font-weight: 500;
+    background-color: var(--surface-c);
 }
 
 ::ng-deep .p-inputgroup input:first-child {
