--- a/imageUploader/src/app/uploader/components/card-image/card-image.component.html
+++ b/imageUploader/src/app/uploader/components/card-image/card-image.component.html
@@ -17,7 +17,7 @@
         type="text"
         pInputText
         placeholder="https://images.mydomain.com/photo-hash1fa56d"
-        readonly
+        p-disabled
       />
       <button type="button" pButton pRipple (click)="copyLink()">
         Copy Link
