--- a/imageUploader/src/app/uploader/components/uploader/uploader.component.html
+++ b/imageUploader/src/app/uploader/components/uploader/uploader.component.html
@@ -23,7 +23,7 @@
   </div>
   <p class="text-mute">Or</p>
   <p-fileUpload
-    styleClass="p-button-raised p-button-sm"
+    styleClass="p-button-raised p-button-sm btn-cfile"
     chooseLabel="Choose File"
     mode="basic"
     accept="image/*"
