--- a/imageUploader/src/app/app.component.html
+++ b/imageUploader/src/app/app.component.html
@@ -1,1 +1,12 @@
+<div class="theme-btn-div">
+  <button
+    pButton
+    pRipple
+    type="button"
+    [icon]="icon"
+    class="p-button-rounded p-button-secondary p-button-sm"
+    (click)="changeTheme(!darkTheme)"
+  ></button>
+</div>
+
 <router-outlet></router-outlet>
