--- a/imageUploader/src/app/app.component.html
+++ b/imageUploader/src/app/app.component.html
@@ -4,9 +4,13 @@
     pRipple
     type="button"
     [icon]="icon"
-    class="p-button-rounded p-button-secondary p-button-sm"
+    class="p-button-rounded p-button-secondary"
     (click)="changeTheme(!darkTheme)"
   ></button>
 </div>
 
 <router-outlet></router-outlet>
+
+<div class="footer">
+  <p>created by <span>@Yadira-Ferrer</span></p>
+</div>
