--- a/imageUploader/src/app/uploader/components/card-image/card-image.component.css
+++ b/imageUploader/src/app/uploader/components/card-image/card-image.component.css
@@ -6,11 +6,7 @@
     padding: 0;
 }
 
-::ng-deep .p-card .p-card-body {
-    padding: 1.75rem;
-}
-
-p {
+.title {
     font-weight: bold;
     margin-bottom: 0;
 }
@@ -32,14 +28,21 @@ input {
     background-color: var(--surface-c);
 }
 
-::ng-deep .p-inputgroup input:first-child {
+:host ::ng-deep .p-inputgroup input:first-child {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
-::ng-deep .p-inputgroup button:last-child {
+:host ::ng-deep .p-inputgroup button:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     padding: 10px 15px;
     font-size: small;
+}
+
+.text-footer {
+    color: var(--primary-color);
+    font-size: 12px !important;
+    margin-top: 1.5rem;
+    cursor: pointer;
 }
