--- a/imageUploader/src/app/uploader/components/loader/loader.component.css
+++ b/imageUploader/src/app/uploader/components/loader/loader.component.css
@@ -2,10 +2,10 @@ h4 {
     margin: 0 auto 25px;
 }
 
-::ng-deep .p-card .p-card-body {
+:host ::ng-deep .p-card .p-card-body {
     padding: 1.5rem;
 }
 
-::ng-deep .p-card .p-card-content {
+:host ::ng-deep .p-card .p-card-content {
     padding: 0;
 }
