--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
@@ -1,3 +1,21 @@
+<div class="theme-btn-div">
+  <button
+    pButton
+    pRipple
+    type="button"
+    icon="pi pi-home"
+    class="p-button-rounded p-button-primary mr-2"
+    (click)="backToUploader()"
+  ></button>
+  <button
+    pButton
+    pRipple
+    type="button"
+    [icon]="currentTheme.icon"
+    class="p-button-rounded p-button-secondary"
+    (click)="changeTheme()"
+  ></button>
+</div>
 <div class="container flex align-content-center justify-content-center">
   <div class="flex align-items-center justify-content-center">
     <app-uploader
@@ -5,6 +23,9 @@
       (sendFile)="uploadFile($event)"
     ></app-uploader>
     <app-loader *ngIf="showLoading"></app-loader>
-    <app-card-image *ngIf="showImage" [image]="imageURL"></app-card-image>
+    <app-card-image
+      *ngIf="!showUploader && !showLoading"
+      [image]="imageURL"
+    ></app-card-image>
   </div>
 </div>
