Fix bugs and build app

--- a/imageUploader/src/app/app.component.html
+++ b/imageUploader/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
 
 <div class="footer">
-  <p>created by <span>@Yadira-Ferrer</span></p>
+  <p>created by <span>@Yadira-Ferrer</span> - devChallenges.io</p>
 </div>
