--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.css
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.css
@@ -1,8 +1,9 @@
 .container {
-    min-height: 88vh;
+    min-height: 85vh;
 }
 
 .theme-btn-div {
     text-align: center; 
-    margin: 1rem 0.75rem 0;
+    margin: 1rem 0.75rem 0.5rem;
+
 }
