--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
@@ -25,7 +25,7 @@
     <app-loader *ngIf="showLoading"></app-loader>
     <app-card-image
       *ngIf="!showUploader && !showLoading"
-      [image]="imageURL"
+      [image]="image"
     ></app-card-image>
   </div>
 </div>
