Get image extension

--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
@@ -3,7 +3,7 @@
     pButton
     pRipple
     type="button"
-    icon="pi pi-home"
+    icon="pi pi-upload"
     class="p-button-rounded p-button-primary mr-2"
     (click)="backToUploader()"
   ></button>
