--- a/imageUploader/src/app/uploader/components/uploader/uploader.component.html
+++ b/imageUploader/src/app/uploader/components/uploader/uploader.component.html
@@ -2,7 +2,7 @@
   header="Upload your image"
   subheader="File should be .jpeg, .png, ..."
   styleClass="shadow-5"
-  [style]="{ width: '25rem', 'text-align': 'center' }"
+  [style]="{ 'text-align': 'center' }"
 >
   <!-- Body Content -->
   <div class="drag-div">
