--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.html
@@ -16,8 +16,8 @@
     (click)="changeTheme()"
   ></button>
 </div>
-<div class="container flex align-content-center justify-content-center">
-  <div class="flex align-items-center justify-content-center">
+<div class="container">
+  <div class="" id="inner-box">
     <app-uploader
       *ngIf="showUploader"
       (sendFile)="uploadFile($event)"
