--- a/imageUploader/src/app/uploader/components/loader/loader.component.html
+++ b/imageUploader/src/app/uploader/components/loader/loader.component.html
@@ -1,4 +1,4 @@
-<p-card styleClass="shadow-5" [style]="{ width: '20rem' }">
+<p-card styleClass="shadow-5">
   <h4>Uploading...</h4>
   <p-progressBar
     mode="indeterminate"
