--- a/imageUploader/src/app/uploader/image-uploader/image-uploader.component.css
+++ b/imageUploader/src/app/uploader/image-uploader/image-uploader.component.css
@@ -1,9 +1,15 @@
 .container {
     min-height: 85vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .theme-btn-div {
     text-align: center; 
     margin: 1rem 0.75rem 0.5rem;
+}
 
+#inner-box {
+    width: 400px;    
 }
